Added modal display on click at mouse pointer coords

--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -10,3 +10,13 @@ body {margin: 0}
     cursor: crosshair;
 }
 
+.modal{
+    display:none;
+    position: absolute;
+    background: white;
+    z-index: 100;
+    
+}
+.modal.show{
+    display:block;
+}
