--- a/src/pages/Game.css
+++ b/src/pages/Game.css
@@ -11,12 +11,8 @@ body {margin: 0}
 }
 
 .modal{
-    display:none;
-    position: absolute;
-    background: white;
     z-index: 100;
-    
-}
-.modal.show{
-    display:block;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
 }
